--- a/dev/index.html
+++ b/dev/index.html
@@ -1,5 +1,20 @@
 <html>
 <head>
+    <meta charset="utf-8">
+    <style>
+
+        .node {
+            stroke: #000;
+            stroke-width: 1.5px;
+        }
+
+        .link {
+            stroke: #999;
+            stroke-width: 1.5px;
+        }
+
+    </style>
+    <svg width="1200" height="800"></svg>
     <script type="text/javascript" src="../static/bundle.js"></script>
 </head>
 <body>
