still hacking. made a chord diagram

--- a/dev/index.html
+++ b/dev/index.html
@@ -2,19 +2,17 @@
 <head>
     <meta charset="utf-8">
     <style>
-
-        .node {
+        body {
+            font: 10px sans-serif;
+        }
+        .group-tick line {
             stroke: #000;
-            stroke-width: 1.5px;
         }
-
-        .link {
-            stroke: #999;
-            stroke-width: 1.5px;
+        .ribbons {
+            fill-opacity: 0.67;
         }
-
     </style>
-    <svg width="1200" height="800"></svg>
+    <svg width="1200" height="1200"></svg>
     <script type="text/javascript" src="../static/bundle.js"></script>
 </head>
 <body>
